@@ -1,5 +1,15 @@
 2015-11-19  Filip Pizlo  <fpizlo@apple.com>
 
+        Fix FTL->B3 lowering of Phi
+        https://bugs.webkit.org/show_bug.cgi?id=151460
+
+        Reviewed by Geoffrey Garen.
+
+        * ftl/FTLLowerDFGToLLVM.cpp:
+        (JSC::FTL::DFG::LowerDFGToLLVM::compilePhi):
+
+2015-11-19  Filip Pizlo  <fpizlo@apple.com>
+
         FTL->B3 lowering should support lazy slow paths, patchpoints, all integer comparisons, and more load/stores
         https://bugs.webkit.org/show_bug.cgi?id=151459
 
